some routing and repository added

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
             <div class="row button">
                 <input type="submit" value="Login">
             </div>
-            <div class="signup-link"><a href="#">Registration</a></div>
+            <div class="signup-link"><a th:href="@{/registration}">Registration</a></div>
         </form>
     </div>
 </div>
