customer accounts list added

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,7 +36,7 @@
       <div class="row">
         <input type="text"
                placeholder="Meter No"
-               th:field="*{accountNumber}"
+               th:field="*{meterNumber}"
                required
         >
       </div>
