--- a/src/main/resources/templates/customer-info.html
+++ b/src/main/resources/templates/customer-info.html
@@ -2,9 +2,22 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Customer Info</title>
+    <link rel="stylesheet" href="../customer-info.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 <body>
-customer info
+<div class="container">
+    <div class="wrapper">
+        <div class="title"><span>List of Meter</span></div>
+        <div class="list-item">
+            <ul>
+                <li th:each="accountDetail: ${accountDetails}">
+                    <a th:text="${accountDetail.meterNumber}"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
