--- a/src/main/resources/static/signin.css
+++ b/src/main/resources/static/signin.css
@@ -5,10 +5,10 @@
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 }
+
 body{
     background: #1abc9c;
     overflow: hidden;
-    height: 100%;
 }
 ::selection{
     background: rgba(26,188,156,0.3);
@@ -29,9 +29,10 @@ body{
     background: #16a085;
     border-radius: 5px 5px 0 0;
     color: #fff;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -87,7 +88,7 @@ form .row input::placeholder{
 .wrapper form .button input{
     color: #fff;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 400;
     padding-left: 0px;
     background: #16a085;
     border: 1px solid #16a085;
@@ -96,15 +97,41 @@ form .row input::placeholder{
 form .button input:hover{
     background: #12876f;
 }
-.wrapper form .signup-link{
-    text-align: center;
-    margin-top: 20px;
+
+.signup{
     font-size: 17px;
+    text-align: center;
 }
-.wrapper form .signup-link a{
-    color: #16a085;
+.signup label a{
+    color: #009579;
+    cursor: pointer;
+    text-align: center;
+}
+.signup label a:hover{
+    text-decoration: underline;
+}
+
+/*navbar*/
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #16a085;;
+    color: #fff;
+}
+
+.nav-links a {
+    color: #fff;
+}
+.logo {
+    font-size: 32px;
+}
+
+a {
     text-decoration: none;
 }
-form .signup-link a:hover{
-    text-decoration: underline;
+
+li {
+    list-style: none;
 }
