--- a/src/main/resources/static/signup.css
+++ b/src/main/resources/static/signup.css
@@ -5,10 +5,10 @@
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 }
-
 body{
     background: #1abc9c;
     overflow: hidden;
+    height: 100%;
 }
 ::selection{
     background: rgba(26,188,156,0.3);
@@ -87,7 +87,7 @@ form .row input::placeholder{
 .wrapper form .button input{
     color: #fff;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 400;
     padding-left: 0px;
     background: #16a085;
     border: 1px solid #16a085;
@@ -107,4 +107,42 @@ form .button input:hover{
 }
 form .signup-link a:hover{
     text-decoration: underline;
+}
+
+.login{
+    font-size: 17px;
+    text-align: center;
+}
+.login label a{
+    color: #009579;
+    cursor: pointer;
+    text-align: center;
+}
+.login label a:hover{
+    text-decoration: underline;
+}
+
+/*navbar*/
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #16a085;;
+    color: #fff;
+}
+
+.nav-links a {
+    color: #fff;
+}
+.logo {
+    font-size: 32px;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
 }
