--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Form</title>
-  <link rel="stylesheet" href="../registration.css">
+  <title>Meter Notifier | Signup</title>
+  <link rel="stylesheet" href="../signup.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 <body>
+<div th:insert="navbar :: navbar">  </div>
 <div class="container">
   <div class="wrapper">
-    <div class="title"><span>Registration Form</span></div>
+    <div class="title"><span>Signup</span></div>
     <form
       method="post"
       role="form"
       action="#"
-      th:action="@{/registration}"
+      th:action="@{/signup}"
       th:object="${customer}"
     >
       <div class="row">
@@ -41,9 +42,13 @@
         >
       </div>
       <div class="row button">
-        <input type="submit" value="Register">
+        <input type="submit" value="Signup">
       </div>
-      <div class="signup-link"><a th:href="@{/}">Log In</a></div>
+      <div class="login">
+            <span class="login">Already have an account?
+             <label><a th:href="@{/}">Signin</a></label>
+            </span>
+      </div>
     </form>
   </div>
 </div>
