created meter details update view

--- a/src/main/resources/static/customer-account-details.css
+++ b/src/main/resources/static/customer-account-details.css
@@ -10,7 +10,7 @@
     margin: 10%;
 }
 /*navbar*/
-.navbar {
+.nav-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
