--- a/src/main/resources/static/signin.css
+++ b/src/main/resources/static/signin.css
@@ -112,7 +112,7 @@ form .button input:hover{
 }
 
 /*navbar*/
-.navbar {
+.nav-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
