--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav th:fragment="navbar" class="navbar">
+<nav th:fragment="navbar" class="nav-top">
   <div class="logo">DESKO Meter Notifier</div>
   <!-- NAVIGATION MENU -->
   <ul class="nav-links">
