--- a/src/main/resources/static/add-meter.css
+++ b/src/main/resources/static/add-meter.css
@@ -124,7 +124,7 @@ form .signup-link a:hover{
 }
 
 /*navbar*/
-.navbar {
+.nav-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
