--- a/src/main/resources/static/signup.css
+++ b/src/main/resources/static/signup.css
@@ -123,7 +123,7 @@ form .signup-link a:hover{
 }
 
 /*navbar*/
-.navbar {
+.nav-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
