--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -28,13 +28,13 @@
         <div class="form-group">
           <label class="col-sm-3 control-label">Account No</label>
           <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}">
+            <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}" required>
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Meter No</label>
           <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}">
+            <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}" required>
           </div>
         </div>
         <hr>
@@ -42,7 +42,7 @@
           <label class="col-sm-3 control-label">Low Balance Notification</label>
           <div class="col-sm-3">
             <label class="switch">
-              <input type="checkbox" th:checked="*{notification}" >
+              <input type="checkbox" th:checked="*{notification}" th:required="*{notification}">
               <span class="slider"></span>
             </label>
           </div>
