--- a/src/main/resources/templates/customer-account-details.html
+++ b/src/main/resources/templates/customer-account-details.html
@@ -37,8 +37,8 @@
       <td th:text="${meterAccountDetails.accountNumber}" />
       <td th:text="${meterAccountDetails.meterNumber}" />
       <td th:text="${meterAccountDetails.balance}" />
-      <td th:if="${meterAccountDetails.notification}">On</td>
-      <td th:if="${not meterAccountDetails.notification}">Off</td>
+      <td th:if="${meterAccountDetails.notification.status}">On</td>
+      <td th:if="${not meterAccountDetails.notification.status}">Off</td>
       <td>
         <a th:href="@{/edit-meter/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}" class="btn btn-primary">Edit</a>
         <a th:href="@{/delete-confirmation/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}" class="btn btn-danger ml-2">Delete</a>
