--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -5,6 +5,11 @@
   <link rel="stylesheet" href="../edit-meter.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body style="background: #1abc9c;">
@@ -41,21 +46,21 @@
         <div class="form-group">
           <label class="col-sm-3 control-label">Low Balance Notification</label>
           <div class="col-sm-3">
-            <label class="switch">
-              <input type="checkbox" th:checked="*{notification.status}" th:required="*{notification.status}">
-              <span class="slider"></span>
-            </label>
+            <select th:field="*{notification.status}">
+              <option th:value="true" th:text="On"></option>
+              <option th:value="false" th:text="Off"></option>
+            </select>
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label"></label>
           <div class="col-sm-3">
             <label class="control-label small">When the balance gets lower</label>
-            <input type="text" class="form-control" placeholder="balance" th:field="*{notification.minimumBalance}">
+            <input type="text" class="form-control" placeholder="balance" th:field="*{notification.minimumBalance}" th:required="*{notification.status}">
           </div>
           <div class="col-sm-3">
             <label class="control-label small">Send email to</label>
-            <input type="text" class="form-control" placeholder="email" th:field="*{notification.emailToSendNotification}">
+            <input type="text" class="form-control" placeholder="email" th:field="*{notification.emailToSendNotification}" th:required="*{notification.status}">
           </div>
         </div>
         <hr>
