--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -42,6 +42,9 @@
                required
         >
       </div>
+      <div class="error" th:if="${error}">
+        <p th:text="${error}"></p>
+      </div>
       <div class="row button">
         <input type="submit" value="Signup">
       </div>
