--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meter Notifier | 404</title>
   <link rel="stylesheet" href="../404.css">
+  <link rel="stylesheet" href="../navbar.css">
 </head>
 <body>
 <div th:insert="navbar :: navbar">  </div>
