--- a/src/main/resources/templates/customer-account-details.html
+++ b/src/main/resources/templates/customer-account-details.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet"
         type="text/css"
         href="../customer-account-details.css">
+  <link rel="stylesheet" href="../navbar.css">
   <link rel="stylesheet"
         type="text/css"
         href="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.css" />
@@ -13,7 +14,7 @@
 
 </head>
 
-<body style="background: #1abc9c;">
+<body style="background: #c1c1c1;">
 <div th:insert="navbar :: navbar">  </div>
 <div class="container">
   <h2>List of Meters</h2>
