--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -3,6 +3,8 @@
 <head>
   <title>Meter Notifier | Edit Meter</title>
   <link rel="stylesheet" href="../edit-meter.css">
+  <link rel="stylesheet" href="../navbar.css">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -12,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body style="background: #1abc9c;">
+<body style="background: #c1c1c1;">
 <div th:insert="navbar :: navbar">  </div>
 <div class="container">
   <h2 style="text-align: center">Edit Meter Details</h2>
