--- a/src/main/resources/static/404.css
+++ b/src/main/resources/static/404.css
@@ -7,7 +7,7 @@ html {
 }
 
 body{
-    background: #1abc9c;
+    background: #c1c1c1;
     font-family: 'Lato', sans-serif;
     color: black;
     margin: 0;
@@ -35,21 +35,4 @@ body{
 @keyframes type{
     from{box-shadow: inset -3px 0px 0px #888;}
     to{box-shadow: inset -3px 0px 0px transparent;}
-}
-
-/*navbar*/
-.nav-top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: #16a085;;
-    color: #fff;
-}
-
-.nav-links a {
-    color: #fff;
-}
-.logo {
-    font-size: 32px;
 }
