--- a/src/main/resources/static/email-verification-message.css
+++ b/src/main/resources/static/email-verification-message.css
@@ -7,7 +7,7 @@
 html, body{
     height: 100%;
     width: 100%;
-    background: #1abc9c;
+    background: #c1c1c1;
     overflow: hidden;
 }
 .container{
@@ -20,9 +20,9 @@ html, body{
     align-items: center;
     border: solid;
     padding: 70px;
+    background: #ffffff;
 }
 .container .r-1{
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,24 +30,19 @@ html, body{
     width: 100%;
 }
 .container .r-2{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-align: center;
     height: 50%;
     width: 100%;
+    margin-top: 5%;
 }
 .container .r-2 span{
     position: absolute;
 }
 .container .r-3{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     text-align: center;
     height: 20%;
     width: 40%;
+    margin-top: 5%;
 }
 
 hr {
@@ -56,38 +51,15 @@ hr {
 }
 .btn-1{
     color: #fff;
-    background: grey;
+    background: #c1c1c1;
     font-size: 15px;
     font-weight: 400;
     padding: 5px;
-    border: 1px solid #16a085;
+    border: 1px solid #c1c1c1;
     cursor: pointer;
     border-radius: 5px;
+    margin-right: 5px;
 }
 .btn-1:hover{
     background: #257f6c;
-}
-/*navbar*/
-.nav-top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: #16a085;;
-    color: #fff;
-}
-
-.nav-links a {
-    color: #fff;
-}
-.logo {
-    font-size: 32px;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
 }
