--- a/src/main/resources/templates/delete-meter-confirmation.html
+++ b/src/main/resources/templates/delete-meter-confirmation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meter Notifier | delete-confirmation</title>
     <link rel="stylesheet" href="../delete-meter-confirmation.css">
+    <link rel="stylesheet" href="../navbar.css">
 </head>
 <body>
 <div th:insert="navbar :: navbar">  </div>
