--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,10 +1,3 @@
-<nav th:fragment="navbar" class="nav-top">
-  <div class="logo">DESKO Meter Notifier</div>
-  <!-- NAVIGATION MENU -->
-  <ul class="nav-links">
-    <!-- NAVIGATION MENUS -->
-    <div class="menu">
-      <!--<li><a th:href="@{/}">Login</a></li>-->
-    </div>
-  </ul>
-</nav>
+<div th:fragment="navbar" class="nav-top">
+  <a href="#home">DESKO Meter Notifier</a>
+</div>
