--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,3 +1,3 @@
 <div th:fragment="navbar" class="nav-top">
-  <a href="#home">DESKO Meter Notifier</a>
+  <a th:href="@{/}">DESKO Meter Notifier</a>
 </div>
