--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -21,7 +21,7 @@
   <section class="panel panel-default" style="border-color: #ffffff; background: transparent">
     <div class="panel-body">
       <form action="#"
-            class="form-horizontal"
+            class="form-horizontal h3"
             method="post"
             th:action="@{/edit-meter/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}"
             th:object="${meterAccountDetails}"
