--- a/src/main/resources/templates/email-verification-message.html
+++ b/src/main/resources/templates/email-verification-message.html
@@ -15,7 +15,7 @@
   <div class="r-2" th:text="'We have sent a verification link to -'+${email}+'- to verify your email address and activate your account. The link will expire in 24 hours.'"></div>
   <hr>
   <div class="r-3">
-    <button class="btn-1">Click here</button>if you did not receive an email.
+    <a>cick here</a> if you did not receive an email.
   </div>
 </div>
 </body>
