--- a/src/main/resources/static/add-meter.css
+++ b/src/main/resources/static/add-meter.css
@@ -37,6 +37,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 .wrapper form{
     padding: 30px 25px 25px 25px;
