view issue fixed

--- a/src/main/resources/static/add-meter.css
+++ b/src/main/resources/static/add-meter.css
@@ -98,7 +98,7 @@ form .row input::placeholder{
     cursor: pointer;
 }
 form .button input:hover{
-    background: #12876f;
+    background: black;
 }
 .wrapper form .signup-link{
     text-align: center;
