--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <div class="title">
             <span>Welcome!</span>
-            <span>Signin to view your meter details</span>
+            <span>Sign in to view your meter details</span>
         </div>
         <form
                 method="post"
@@ -35,7 +35,7 @@
                 <p th:text="${error}"></p>
             </div>
             <div class="row button">
-                <input type="submit" value="Signin">
+                <input type="submit" value="Sign In">
             </div>
             <div class="signup">
             <span class="signup">Don't have an account?
