--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -51,7 +51,7 @@
       </div>
       <div class="login">
             <span class="login">Already have an account?
-             <label><a th:href="@{/}">Signin</a></label>
+             <label><a th:href="@{/}">Sign In</a></label>
             </span>
       </div>
     </form>
