--- a/src/main/resources/static/email-verification-message.css
+++ b/src/main/resources/static/email-verification-message.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 }
 html, body{
@@ -11,40 +10,50 @@ html, body{
     overflow: hidden;
 }
 .container{
-    margin: 10% auto auto;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+.wrapper{
     height: 40%;
     width: 50%;
-    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    border: solid;
-    padding: 70px;
-    background: #ffffff;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    padding: 20px;
+
 }
-.container .r-1{
+.container .wrapper .r-1{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 30%;
-    width: 100%;
 }
-.container .r-2{
+
+.container .wrapper .r-2{
     text-align: center;
-    height: 50%;
-    width: 100%;
-    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40%;
 }
-.container .r-2 span{
-    position: absolute;
-}
-.container .r-3{
+.container .wrapper .r-3{
     text-align: center;
-    height: 20%;
-    width: 40%;
-    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30%;
 }
-.container .r-3 a{
+.container .wrapper .r-3 a{
     color: blue;
     cursor: pointer;
 }
@@ -52,18 +61,4 @@ html, body{
 hr {
     width:70%;
     border: 1px solid ;
-}
-.btn-1{
-    color: #fff;
-    background: #c1c1c1;
-    font-size: 15px;
-    font-weight: 400;
-    padding: 5px;
-    border: 1px solid #c1c1c1;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-right: 5px;
-}
-.btn-1:hover{
-    background: #257f6c;
 }
