--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -17,7 +17,7 @@
 <body style="background: #c1c1c1;">
 <div th:insert="navbar :: navbar">  </div>
 <div class="container">
-  <h2 style="text-align: center">Edit Meter Details</h2>
+  <h2 style="text-align: center;font-size:32px">Edit Meter Details</h2>
   <section class="panel panel-default" style="border-color: #ffffff; background: transparent">
     <div class="panel-body">
       <form action="#"
@@ -28,20 +28,20 @@
       >
         <div class="form-group">
           <label class="col-sm-3 control-label">Email</label>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="Email" th:field="*{customer.email}" readonly>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" placeholder="Email" th:field="*{customer.email}" readonly style="font-size:15px;">
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Account No</label>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}" required>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}" required style="font-size:15px;">
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Meter No</label>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}" required>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}" required style="font-size:15px;">
           </div>
         </div>
         <hr>
@@ -56,19 +56,19 @@
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label"></label>
-          <div class="col-sm-3">
-            <label class="control-label small">When the balance gets lower</label>
-            <input type="text" class="form-control" placeholder="balance" th:field="*{notification.minimumBalance}" th:required="*{notification.status}">
+          <div class="col-sm-4">
+            <label class="control-label small" style="font-size:15px; padding-bottom: 5px">When the balance gets lower</label>
+            <input type="number" min="0" class="form-control" placeholder="balance" th:field="*{notification.minimumBalance}" th:required="*{notification.status}" style="font-size:15px;">
           </div>
-          <div class="col-sm-3">
-            <label class="control-label small">Send email to</label>
-            <input type="text" class="form-control" placeholder="email" th:field="*{notification.emailToSendNotification}" th:required="*{notification.status}">
+          <div class="col-sm-4">
+            <label class="control-label small" style="font-size:15px; padding-bottom: 5px">Send email to</label>
+            <input type="email" class="form-control" placeholder="email" th:field="*{notification.emailToSendNotification}" th:required="*{notification.status}" style="font-size:15px;">
           </div>
         </div>
         <hr>
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-9">
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary" style="font-size:15px;">Update</button>
           </div>
         </div>
       </form>
