--- a/src/main/resources/templates/email-verification-message.html
+++ b/src/main/resources/templates/email-verification-message.html
@@ -10,12 +10,14 @@
 <body>
 <div th:insert="navbar :: navbar">  </div>
 <div class="container">
-  <div class="r-1"><h2>Please verify your email</h2></div>
-  <hr/>
-  <div class="r-2" th:text="'We have sent a verification link to -'+${email}+'- to verify your email address and activate your account. The link will expire in 24 hours.'"></div>
-  <hr>
-  <div class="r-3">
-    <a>cick here</a> if you did not receive an email.
+  <div class="wrapper">
+    <div class="r-1"><h2>Please verify your email</h2></div>
+    <hr/>
+    <div class="r-2"><p>We have sent a verification link to <span><b>email</b></span> to verify your email address and activate your account. The link will expire in 24 hours.</p></div>
+    <hr>
+    <div class="r-3">
+      <p><a>cick here</a> if you did not receive an email.</p>
+    </div>
   </div>
 </div>
 </body>
