sign in heading changed

--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <div class="title">
             <span>Welcome!</span>
-            <span>Sign in to view your meter details</span>
+            <span>your meter details await, Sign in now</span>
         </div>
         <form
                 method="post"
