--- a/src/main/resources/static/signin.css
+++ b/src/main/resources/static/signin.css
@@ -27,6 +27,7 @@ body{
     box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
 }
 .wrapper .title{
+    padding: 20px;
     height: 90px;
     background: #333333;
     border-radius: 5px 5px 0 0;
