about page added

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,3 +1,4 @@
 <div th:fragment="navbar" class="nav-top">
-  <a th:href="@{/}">DESKO Meter Notifier</a>
+  <a th:href="@{/}" class="logo">Meter Notifier</a>
+  <a th:href="@{/about}" class="about">About</a>
 </div>
