--- a/src/main/resources/static/navbar.css
+++ b/src/main/resources/static/navbar.css
@@ -4,6 +4,10 @@
     position: fixed;
     top: 0;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .nav-top a {
@@ -13,5 +17,10 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+}
+.logo{
+    font-size: 25px;
+}
+.about{
+    font-size: 20px;
 }
