--- a/src/main/resources/static/signup.css
+++ b/src/main/resources/static/signup.css
@@ -1,32 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
     background: #c1c1c1;
     overflow: hidden;
     height: 100%;
 }
-::selection{
-    background: rgba(26,188,156,0.3);
+
+::selection {
+    background: rgba(26, 188, 156, 0.3);
 }
-.container{
+
+.container {
     max-width: 440px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.wrapper{
+
+.wrapper {
     width: 100%;
     background: #fff;
     border-radius: 5px;
-    box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
 }
-.wrapper .title{
+
+.wrapper .title {
     height: 90px;
     background: #333333;
     border-radius: 5px 5px 0 0;
@@ -37,15 +43,18 @@ body{
     align-items: center;
     justify-content: center;
 }
-.wrapper form{
+
+.wrapper form {
     padding: 30px 25px 25px 25px;
 }
-.wrapper form .row{
+
+.wrapper form .row {
     height: 45px;
     margin-bottom: 15px;
     position: relative;
 }
-.wrapper form .row input{
+
+.wrapper form .row input {
     height: 100%;
     width: 100%;
     outline: none;
@@ -55,14 +64,17 @@ body{
     font-size: 16px;
     transition: all 0.3s ease;
 }
-form .row input:focus{
+
+form .row input:focus {
     border-color: #16a085;
-    box-shadow: inset 0px 0px 2px 2px rgba(26,188,156,0.25);
+    box-shadow: inset 0px 0px 2px 2px rgba(26, 188, 156, 0.25);
 }
-form .row input::placeholder{
+
+form .row input::placeholder {
     color: #999;
 }
-.wrapper form .row i{
+
+.wrapper form .row i {
     position: absolute;
     width: 47px;
     height: 100%;
@@ -75,18 +87,22 @@ form .row input::placeholder{
     align-items: center;
     justify-content: center;
 }
-.wrapper form .pass{
+
+.wrapper form .pass {
     margin: -8px 0 20px 0;
 }
-.wrapper form .pass a{
+
+.wrapper form .pass a {
     color: #16a085;
     font-size: 17px;
     text-decoration: none;
 }
-.wrapper form .pass a:hover{
+
+.wrapper form .pass a:hover {
     text-decoration: underline;
 }
-.wrapper form .button input{
+
+.wrapper form .button input {
     color: #fff;
     font-size: 20px;
     font-weight: 400;
@@ -95,36 +111,43 @@ form .row input::placeholder{
     border: 1px solid #333333;
     cursor: pointer;
 }
-form .button input:hover{
+
+form .button input:hover {
     background: black;
 }
-.wrapper form .signup-link{
+
+.wrapper form .signup-link {
     text-align: center;
     margin-top: 20px;
     font-size: 17px;
 }
-.wrapper form .signup-link a{
+
+.wrapper form .signup-link a {
     color: #16a085;
     text-decoration: none;
 }
-form .signup-link a:hover{
+
+form .signup-link a:hover {
     text-decoration: underline;
 }
 
-.login{
+.login {
     font-size: 17px;
     text-align: center;
 }
-.login label a{
+
+.login label a {
     font-weight: 400;
     color: #0054f7;
     cursor: pointer;
     text-align: center;
 }
-.login label a:hover{
+
+.login label a:hover {
     text-decoration: underline;
 }
-.error{
+
+.error {
     color: red;
     padding-bottom: 15px;
 }
