--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -1,79 +1,88 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Meter Notifier | Edit Meter</title>
-  <link rel="stylesheet" href="../edit-meter.css">
-  <link rel="stylesheet" href="../navbar.css">
+    <title>Meter Notifier | Edit Meter</title>
+    <link rel="stylesheet" href="../edit-meter.css">
+    <link rel="stylesheet" href="../navbar.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body style="background: #c1c1c1;">
-<div th:insert="navbar :: navbar">  </div>
+<div th:insert="navbar :: navbar"></div>
 <div class="container">
-  <h2 style="text-align: center;font-size:32px">Edit Meter Details</h2>
-  <section class="panel panel-default" style="border-color: #ffffff; background: transparent">
-    <div class="panel-body">
-      <form action="#"
-            class="form-horizontal h3"
-            method="post"
-            th:action="@{/edit-meter/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}"
-            th:object="${meterAccountDetails}"
-      >
-        <div class="form-group">
-          <label class="col-sm-3 control-label">Email</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" placeholder="Email" th:field="*{customer.email}" readonly style="font-size:15px;">
-          </div>
+    <h2 style="text-align: center;font-size:32px">Edit Meter Details</h2>
+    <section class="panel panel-default" style="border-color: #ffffff; background: transparent">
+        <div class="panel-body">
+            <form action="#"
+                  class="form-horizontal h3"
+                  method="post"
+                  th:action="@{/edit-meter/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}"
+                  th:object="${meterAccountDetails}"
+            >
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Email</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" placeholder="Email" th:field="*{customer.email}"
+                               readonly style="font-size:15px;">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Account No</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}"
+                               required style="font-size:15px;">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Meter No</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}"
+                               required style="font-size:15px;">
+                    </div>
+                </div>
+                <hr>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Low Balance Notification</label>
+                    <div class="col-sm-3">
+                        <select th:field="*{notification.status}">
+                            <option th:value="true" th:text="On"></option>
+                            <option th:value="false" th:text="Off"></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label"></label>
+                    <div class="col-sm-4">
+                        <label class="control-label small" style="font-size:15px; padding-bottom: 5px">When the balance
+                            gets lower</label>
+                        <input type="number" min="0" class="form-control" placeholder="balance"
+                               th:field="*{notification.minimumBalance}" th:required="*{notification.status}"
+                               style="font-size:15px;">
+                    </div>
+                    <div class="col-sm-4">
+                        <label class="control-label small" style="font-size:15px; padding-bottom: 5px">Send email
+                            to</label>
+                        <input type="email" class="form-control" placeholder="email"
+                               th:field="*{notification.emailToSendNotification}" th:required="*{notification.status}"
+                               style="font-size:15px;">
+                    </div>
+                </div>
+                <hr>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                        <button type="submit" class="btn btn-primary" style="font-size:15px;">Update</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">Account No</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}" required style="font-size:15px;">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">Meter No</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}" required style="font-size:15px;">
-          </div>
-        </div>
-        <hr>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">Low Balance Notification</label>
-          <div class="col-sm-3">
-            <select th:field="*{notification.status}">
-              <option th:value="true" th:text="On"></option>
-              <option th:value="false" th:text="Off"></option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label"></label>
-          <div class="col-sm-4">
-            <label class="control-label small" style="font-size:15px; padding-bottom: 5px">When the balance gets lower</label>
-            <input type="number" min="0" class="form-control" placeholder="balance" th:field="*{notification.minimumBalance}" th:required="*{notification.status}" style="font-size:15px;">
-          </div>
-          <div class="col-sm-4">
-            <label class="control-label small" style="font-size:15px; padding-bottom: 5px">Send email to</label>
-            <input type="email" class="form-control" placeholder="email" th:field="*{notification.emailToSendNotification}" th:required="*{notification.status}" style="font-size:15px;">
-          </div>
-        </div>
-        <hr>
-        <div class="form-group">
-          <div class="col-sm-offset-3 col-sm-9">
-            <button type="submit" class="btn btn-primary" style="font-size:15px;">Update</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </section>
+    </section>
 </div>
 </body>
 </html>
