--- a/src/main/resources/templates/email-verification-message.html
+++ b/src/main/resources/templates/email-verification-message.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meter Notifier | delete-confirmation</title>
-  <link rel="stylesheet" href="../email-verification-message.css">
-  <link rel="stylesheet" href="../navbar.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meter Notifier | delete-confirmation</title>
+    <link rel="stylesheet" href="../email-verification-message.css">
+    <link rel="stylesheet" href="../navbar.css">
 </head>
 <body>
-<div th:insert="navbar :: navbar">  </div>
+<div th:insert="navbar :: navbar"></div>
 <div class="container">
-  <div class="wrapper">
-    <div class="r-1"><h2>Please verify your email</h2></div>
-    <hr/>
-    <div class="r-2"><p>We have sent a verification link to <span><b>email</b></span> to verify your email address and activate your account. The link will expire in 24 hours.</p></div>
-    <hr>
-    <div class="r-3">
-      <p><a>cick here</a> if you did not receive an email.</p>
+    <div class="wrapper">
+        <div class="r-1"><h2>Please verify your email</h2></div>
+        <hr/>
+        <div class="r-2"><p>We have sent a verification link to <span><b>email</b></span> to verify your email address
+            and activate your account. The link will expire in 24 hours.</p></div>
+        <hr>
+        <div class="r-3">
+            <p><a>cick here</a> if you did not receive an email.</p>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
